--- a/sass/index.scss
+++ b/sass/index.scss
@@ -423,197 +423,5 @@ footer {
     }
 }
 
-/* Animation */
-@keyframes fadeUp {
-    0% { transform: translateY(4rem); }
-    100% { opacity: 1; transform: translateY(0rem); }
-}
-
-@keyframes scale {
-    0% { transform: scale(2); }
-    100% { opacity: 1; transform: scale(1); }
-}
-
-@keyframes grow {
-    0% { width: 0; }
-    100% { opacity: 1; width: 100%; }
-}
-
-@keyframes spin {
-    0% { transform: rotate(0); }
-    100% { opacity: 1; transform: rotate(-360deg); }
-}
-
-@keyframes fadeDown {
-    0% { transform: translateY(-1rem); }
-    100% { opacity: 1; transform: translateY(0); }
-}
-
-
-
-/* Media Query */
-@media (min-width: 900px) {
-    *{}
-    header {
-        nav {
-            .nav-list {
-                transform: translateX(0);
-                position: initial; // static, hien dung vi tri theo nav style
-                width: auto;
-                height: auto;
-                justify-content: space-between;
-                flex-direction: row;
-                background-color: transparent;
-            }
-            .menu-toggle {
-                display: none;
-            }
-        }
-    }
-    
-    .discover-our-story {
-        .restaurant-info {
-            display: flex;
-            align-items: center;
-            text-align: center;
-            > div {
-                flex: 1;
-            }
-            .restaurant-description {
-                padding-right: 7rem;
-                .global-headline {
-                    .headline {
-                        color: $main-font-color-dark;
-                    }
-                    .asterisk {
-                        margin: 2.4rem 0;
-                    }
-                }
-                p {
-                    line-height: 1.6;
-                    margin-bottom: 2.4rem;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 768px){ 
-    .discover-our-story {
-        .restaurant-description {
-            margin-top: 0;
-            .body-cta {
-                display: inline-block;
-                margin-bottom: 2rem;
-            }
-            .asterisk {
-                margin: 2.4rem 0;
-            }
-        }
-        .global-headline {
-            margin-top: 3.9rem;
-        }
-    }
-    
-    .discover-our-menu {
-        .restaurant-description {
-            margin-top: 7.9rem;
-            .asterisk {
-                margin: 2.4rem 0;
-            }
-        }
-    }
-
-    .headline {
-        font-size: 3rem;
-    }
-
-    .sub-headline {
-        font-size: 8rem;
-    }
-
-    section {
-        padding: 3.9rem 0;
-    }
-
-    .culinary-delight {
-        .global-headline {
-            margin-top: 3.9rem;
-        }
-    }
-}
-
-@media (max-width: 568px) {
-    footer {
-        padding: 3.9rem 0 !important;
-        .footer-content {
-            margin-top: 1rem;
-        }
-        .social-icon {
-            li a i {
-                font-size: 1.5rem !important;
-                padding: 0.5rem 1.2rem !important;
-            }
-        }
-        .social-media, .newsletter-container {
-            h4 {
-                margin-bottom: 1.5rem !important;
-                font-size: 1.5rem !important;
-            }
-        }
-
-        .newsletter-container {
-           width: 45% !important;
-           .newsletter-input {
-               padding: .4rem !important;
-           }
-           ::placeholder {
-            font-size: 1rem;
-            }
-            .newsletter-btn {
-                margin-left: 7rem !important;
-                transform: translateY(25%) !important;
-            }
-        }
-        
-    }
-}
-
-@media (max-width: 320px) {
-    header {
-        .nav-item a {
-            font-size: 1.2rem !important;
-        }
-    }
-
-
-    footer {
-        .social-icon li a i {
-            font-size: 1.3rem !important;
-            padding: .5rem 1.2rem !important;
-        }
-
-        .footer-content-divider {
-            h4 {
-                margin-bottom: 1rem !important;
-            }
-        }
-
-        .newsletter-container {
-            width: 40% !important;
-            .newsletter-input {
-                padding: .3rem !important;
-            }
-            ::placeholder {
-             font-size: 1rem;
-            }
-             .newsletter-btn {
-                 i {
-                     font-size: 1.5rem;
-                 }
-                 margin-left: 5rem !important;
-                 transform: translateY(25%) !important;
-            }
-        }
-    }
-}
+@import 'Animation';
+@import 'MediaQuery';
