--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,6 @@ header nav .menu-toggle .fa-times {
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
   text-align: center;
 }
 .hero .animate-fadeUp {
@@ -249,8 +248,9 @@ header nav .menu-toggle .fa-times {
   background: url("../img/tasteful-recipes.jpg") center no-repeat;
   background-size: cover;
   width: 100%;
-  min-height: 65vh;
+  height: 65vh;
   display: flex;
+  align-items: center;
   text-align: center;
 }
 
