--- a/sass/index.scss
+++ b/sass/index.scss
@@ -136,6 +136,7 @@ header {
     width: 100%;
     height: 100vh;
     display: flex;
+    align-items: center;
     text-align: center;
     
     .animate-fadeUp {
@@ -423,3 +424,18 @@ footer {
 
 @import 'Animation';
 @import 'MediaQuery';
+
+
+/* LCT4 20200805
+Focus 1: thoải mái, thú vị -> nghe & hiểu & note lại & tư duy phản biện
+All sntn -> vô đk cắt, ko cần quan tâm, ko luyến tiếc gì hết à.
+
+Câu chuyện bài hát nổi tiếng của NIM yêu thương.
+Giờ chỉ còn điều này thôi.
+
+1/ Con ko thể sống thiếu Ha, Hs: C trở thành ca sĩ và hát bài này
+
+2/ Hãy hối thúc nhanh lên
+
+3/ Khi đến thời kỳ đó
+*/
