--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(../css/fonts.css);
 *, *::before, *::after {
   padding: 0;
@@ -125,6 +126,7 @@ header nav .menu-toggle .fa-times {
   width: 100%;
   height: 100vh;
   display: flex;
+  align-items: center;
   text-align: center;
 }
 .hero .animate-fadeUp {
@@ -448,8 +450,6 @@ footer .footer-content-divider .newsletter-container .newsletter-form .newslette
 
   .discover-our-story .restaurant-info {
     display: flex;
-    align-items: center;
-    text-align: center;
   }
   .discover-our-story .restaurant-info > div {
     flex: 1;
@@ -564,5 +564,18 @@ footer .footer-content-divider .newsletter-container .newsletter-form .newslette
     font-size: 1.5rem;
   }
 }
+/* LCT4 20200805
+Focus 1: thoải mái, thú vị -> nghe & hiểu & note lại & tư duy phản biện
+All sntn -> vô đk cắt, ko cần quan tâm, ko luyến tiếc gì hết à.
+
+Câu chuyện bài hát nổi tiếng của NIM yêu thương.
+Giờ chỉ còn điều này thôi.
+
+1/ Con ko thể sống thiếu Ha, Hs: C trở thành ca sĩ và hát bài này
+
+2/ Hãy hối thúc nhanh lên
+
+3/ Khi đến thời kỳ đó
+*/
 
 /*# sourceMappingURL=style.css.map */
